Fix layout issue in MT5 [https://app.asana.com/0/4590355414073/9058661349758]

--- a/mt-static/plugins/ImageCropper/css/app.css
+++ b/mt-static/plugins/ImageCropper/css/app.css
@@ -102,7 +102,6 @@ div.scrollable {
     overflow:hidden;
     width:765px;
     height:188px;
-    float:left;
     margin-left: 20px;
     margin-bottom: 20px;
 }
